# CSVMeta

./: LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: codeql.yml  dependency-review.yml  publish.yml  scorecard.yml  test.yml
bettercsv/: __init__.py  read.py  write.py
csvmeta/: __init__.py  read.py  write.py
tests/: conftest.py
tests/unit/: test_read.py  test_write.py
