[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "csvmeta"
version = "1.0.0"
description = "Lightweight csv read/write, keeping track of csv dialect and other metadata."
authors = [{ name = "Olivier Binette", email = "olivier@olivierbinette.ca" }]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
]

[project.urls]
homepage = "https://github.com/OlivierBinette/CSVMeta"
Issues = "https://github.com/OlivierBinette/CSVMeta/issues"

[tool.setuptools.packages.find]
include = ["csvmeta", "csvmeta.*"]
namespaces = false

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
